Fixed issue where project name was not bein collected